--- a/Home (Sprint 1 complete).html
+++ b/Home (Sprint 1 complete).html
@@ -32,13 +32,13 @@
                         <a class="nav-link text-white" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="contact.html">Contact</a>
+                        <a class="nav-link text-white" href="contact (Sprint 2 complete).html">Contact</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="about.html">About</a>
+                        <a class="nav-link text-white" href="about (Sprint 2 complete).html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="shop.html">Shop</a>
+                        <a class="nav-link text-white" href="shop (Sprint 1 complete).html">Shop</a>
                     </li>
                 </ul>
             </nav>
