--- a/about (Sprint 2 complete).html
+++ b/about (Sprint 2 complete).html
@@ -27,16 +27,16 @@
               <!-- Links -->
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link text-white" href="Home.html">Home</a>
+                  <a class="nav-link text-white" href="Home (Sprint 1 complete).html">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link text-white" href="contact.html">Contact</a>
+                  <a class="nav-link text-white" href="contact (Sprint 2 complete).html">Contact</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link text-white" href="#">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="shop.html">Shop</a>
+                    <a class="nav-link text-white" href="shop (Sprint 1 complete).html">Shop</a>
                 </li>
               </ul>
             </nav>
